Fixing Nav Link Alignment

--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ body::-webkit-scrollbar-thumb {
   margin: 0;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: left;
   height: 100%;
 }
 
@@ -74,7 +74,7 @@ body::-webkit-scrollbar-thumb {
 
 .nav-link {
   display: flex;
-  align-items: center;
+  align-items: left;
   height: 5rem;
   color: var(--text-primary);
   text-decoration: none;
